<?xml version="1.0"?>
<package format="3">
  <name>snmp_ros</name>
  <version>1.0.2</version>
  <description>Utilities for working with SNMP from ROS</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
  
  <url type="website">https://github.com/ctu-vras/snmp_ros</url>
  <url type="repository">https://github.com/ctu-vras/snmp_ros</url>
  <url type="bugtracker">https://github.com/ctu-vras/snmp_ros/issues</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-pysnmp</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pysnmp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
